_Source/force-app/main/default/objects/BI_Proposal_Request_Form__c/fields/BI_Secondary_Proposal_Req_Inbox_Email__c.field-meta.xml
<CustomField>
    <fullName>BI_Secondary_Proposal_Req_Inbox_Email__c</fullName>
    <label>Secondary Proposal Req Inbox Email</label>
    <type>Email</type>
</CustomField>