_Source/force-app/main/default/objects/BI_Proposal_Request_Form__c/fields/BI_Share_Gap__c.field-meta.xml
<CustomField>
    <fullName>BI_Share_Gap__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Share Gap</label>
    <type>Checkbox</type>
</CustomField>