_Source/force-app/main/default/objects/BI_Proposal_Request_Form__c/fields/BI_Stage__c.field-meta.xml
<CustomField>
    <fullName>BI_Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>BI_Proposal_Request_Form_Status</valueSetName>
    </valueSet>
</CustomField>