_Source/force-app/main/default/objects/BI_Proposal_Request_Form__c/fields/BI_Stage_Last_Modified_Date__c.field-meta.xml
<CustomField>
    <fullName>BI_Stage_Last_Modified_Date__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <label>Stage Last Modified Date</label>
    <type>DateTime</type>
</CustomField>