_Source/force-app/main/default/objects/BI_Proposal_Request_Form__c/fields/BI_Stage_Last_Modified_Date_LOS_Only__c.field-meta.xml
<CustomField>
    <fullName>BI_Stage_Last_Modified_Date_LOS_Only__c</fullName>
    <label>Stage Last Modified Date - LOS Only</label>
    <type>DateTime</type>
</CustomField>