_Source/force-app/main/default/objects/BI_Proposal_Request_Form__c/fields/BI_Strategic_Opportunity_Markets__c.field-meta.xml
<CustomField>
    <fullName>BI_Strategic_Opportunity_Markets__c</fullName>
    <inlineHelpText>Enter details around key markets that you are looking to target for higher discount</inlineHelpText>
    <label>Strategic / Opportunity Markets</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>