_Source/force-app/main/default/objects/BI_Proposal_Request_Form__c/fields/BI_Strategy__c.field-meta.xml
<CustomField>
    <fullName>BI_Strategy__c</fullName>
    <formula>TEXT( BI_Opportunity__r.BI_Strategy__c )</formula>
    <inlineHelpText>Strategy for this tactical is automatically set from the Opportunity. To change the strategy, update the &apos;strategy&apos; field on the Opportunity</inlineHelpText>
    <label>Strategy</label>
    <type>Text</type>
</CustomField>