_Source/force-app/main/default/objects/BI_Proposal_Request_Form__c/fields/BI_Strategy_Description__c.field-meta.xml
<CustomField>
    <fullName>BI_Strategy_Description__c</fullName>
    <formula>BI_Opportunity__r.BI_Strategy_Description__c</formula>
    <inlineHelpText>Strategy Description on the PRF is automatically set from the Opportunity. To change the strategy description, update the &apos;Strategy Description&apos; field on the Opportunity.</inlineHelpText>
    <label>Strategy Description</label>
    <type>Text</type>
</CustomField>