_Source/force-app/main/default/objects/BI_Proposal_Request_Form__c/fields/BI_Subsidiary_Companies__c.field-meta.xml
<CustomField>
    <fullName>BI_Subsidiary_Companies__c</fullName>
    <label>Subsidiary Companies</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>