_Source/force-app/main/default/objects/BI_Proposal_Request_Form__c/fields/BI_Target_Date_for_Pricing_Approval__c.field-meta.xml
<CustomField>
    <fullName>BI_Target_Date_for_Pricing_Approval__c</fullName>
    <inlineHelpText>This is the date that you ideally want pricing from CCM / ACPG</inlineHelpText>
    <label>Target Date for Pricing Approval</label>
    <type>Date</type>
</CustomField>