_Source/force-app/main/default/objects/BI_Proposal_Request_Form__c/fields/BI_TMC_List_Attached__c.field-meta.xml
<CustomField>
    <fullName>BI_TMC_List_Attached__c</fullName>
    <label>TMC List Attached</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>