_Source/force-app/main/default/objects/BI_Proposal_Request_Form__c/fields/BI_Total_Number_of_IPOS__c.field-meta.xml
<CustomField>
    <fullName>BI_Total_Number_of_IPOS__c</fullName>
    <inlineHelpText>Please provide specific market and program type in the IPOS tab of the Proposal Request Form</inlineHelpText>
    <label>Total Number of IPOS</label>
    <summaryForeignKey>BI_IPOS__c.BI_Proposal_Request_Form__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>