_Source/force-app/main/default/objects/BI_Proposal_Request_Form__c/fields/BI_UCS_Data_Flow__c.field-meta.xml
<CustomField>
    <fullName>BI_UCS_Data_Flow__c</fullName>
    <inlineHelpText>It is required to update this field when the Interested Program type(s) include: CPA, Propel Level 1, Propel Level 2, Propel Level 3, Propel Level 4, Propel Level 5</inlineHelpText>
    <label>UCS Data Flow</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>