_Source/force-app/main/default/objects/BI_Proposal_Request_Form__c/fields/BI_UCS_IATA_ARC_LH_ID__c.field-meta.xml
<CustomField>
    <fullName>BI_UCS_IATA_ARC_LH_ID__c</fullName>
    <formula>IF(  BI_Opportunity__r.Account.SIP_ARC_Number__c  != &apos;&apos;, BI_Opportunity__r.Account.SIP_ARC_Number__c ,
   If(BI_Opportunity__r.Account.SIP_Corp_UCS_ID__c  !=&apos;&apos;,BI_Opportunity__r.Account.SIP_Corp_UCS_ID__c ,
     If(BI_Opportunity__r.Account.BI_LH_UCID__c  !=&apos;&apos;,BI_Opportunity__r.Account.BI_LH_UCID__c ,
        IF(BI_Opportunity__r.Account.BI_NH_Corporate_Code__c !=&apos;&apos;,BI_Opportunity__r.Account.BI_NH_Corporate_Code__c ,&apos;&apos;))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>UCS/IATA/ARC #/LH ID</label>
    <type>Text</type>
</CustomField>