_Source/force-app/main/default/objects/BI_Proposal_Request_Form__c/fields/Days_In_Current_Stage__c.field-meta.xml
<CustomField>
    <fullName>Days_In_Current_Stage__c</fullName>
    <formula>Today() - DateValue( BI_Stage_Last_Modified_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days In Current Stage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>