_Source/force-app/main/default/objects/BI_Proposal_Request_Form__c/fields/LAI_DRA_Comments__c.field-meta.xml
<CustomField>
    <fullName>LAI_DRA_Comments__c</fullName>
    <label>LAI/DRA Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>