_Source/force-app/main/default/objects/BI_Proposal_Request_Form__c/fields/PassPlus_Product_Type__c.field-meta.xml
<CustomField>
    <fullName>PassPlus_Product_Type__c</fullName>
    <label>PassPlus Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>United PassPlus Flex Corporate</fullName>
            </value>
            <value>
                <fullName>United PassPlus Secure Corporate</fullName>
            </value>
            <value>
                <fullName>United PassPlus Flex Individual</fullName>
            </value>
            <value>
                <fullName>United PassPlus Secure Individual</fullName>
            </value>
            <value>
                <fullName>United PassPlus Flex Subscription</fullName>
            </value>
            <value>
                <fullName>United PassPlus Secure Subscription</fullName>
            </value>
            <value>
                <fullName>United PassPlus Exec</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>