_Source/force-app/main/default/objects/BI_Proposal_Request_Form__c/fields/Pre_Work_Notes__c.field-meta.xml
<CustomField>
    <fullName>Pre_Work_Notes__c</fullName>
    <label>Pre-Work Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>