_Source/force-app/main/default/objects/BI_Proposal_Request_Form__c/fields/SIP_Actual_Amenity__c.field-meta.xml
<CustomField>
    <fullName>SIP_Actual_Amenity__c</fullName>
    <formula>IF( SIP_Override_Jetstream_AmenityFundAmount__c &gt;0,(SIP_Override_Jetstream_AmenityFundAmount__c +  SIP_Internal_Global_Service_Value__c) / BI_PP_Total_Contracted_Investment__c , (SIP_Jetstream_Amenity_Fund_Amount__c + SIP_Internal_Global_Service_Value__c) / BI_PP_Total_Contracted_Investment__c )</formula>
    <label>Actual Amenity %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>