_Source/force-app/main/default/objects/BI_Proposal_Request_Form__c/fields/SIP_Amenities_offered__c.field-meta.xml
<CustomField>
    <fullName>SIP_Amenities_offered__c</fullName>
    <label>Amenities offered</label>
    <length>255</length>
    <type>Text</type>
</CustomField>