_Source/force-app/main/default/objects/BI_Proposal_Request_Form__c/fields/SIP_City_Town__c.field-meta.xml
<CustomField>
    <fullName>SIP_City_Town__c</fullName>
    <label>City/Town</label>
    <length>255</length>
    <type>Text</type>
</CustomField>