_Source/force-app/main/default/objects/BI_Proposal_Request_Form__c/fields/SIP_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>SIP_Company_Name__c</fullName>
    <label>Company Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>