_Source/force-app/main/default/objects/BI_Proposal_Request_Form__c/fields/SIP_Contract_Initial_Type__c.field-meta.xml
<CustomField>
    <fullName>SIP_Contract_Initial_Type__c</fullName>
    <label>Contract Initial Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Self-Service</fullName>
            </value>
            <value>
                <fullName>Managed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>