_Source/force-app/main/default/objects/BI_Proposal_Request_Form__c/fields/SIP_Contract_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>SIP_Contract_Start_Date__c</fullName>
    <label>UCS Contract Start Date</label>
    <type>Date</type>
</CustomField>