_Source/force-app/main/default/objects/BI_Proposal_Request_Form__c/fields/SIP_Contract_Type__c.field-meta.xml
<CustomField>
    <fullName>SIP_Contract_Type__c</fullName>
    <label>Contract Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PassPlus Flex</fullName>
            </value>
            <value>
                <fullName>PassPlus Secure</fullName>
            </value>
            <value>
                <fullName>PassPlus Exec</fullName>
            </value>
            <value>
                <fullName>PassPlus Exec 2.0</fullName>
            </value>
            <value>
                <fullName>PassPlus Flex 2.0</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>