_Source/force-app/main/default/objects/BI_Proposal_Request_Form__c/fields/SIP_Country__c.field-meta.xml
<CustomField>
    <fullName>SIP_Country__c</fullName>
    <label>Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>