_Source/force-app/main/default/objects/BI_Proposal_Request_Form__c/fields/SIP_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>SIP_Email_Address__c</fullName>
    <label>Email Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>