_Source/force-app/main/default/objects/BI_Proposal_Request_Form__c/fields/Sip_Interested_In_UA_Program__c.field-meta.xml
<CustomField>
    <fullName>Sip_Interested_In_UA_Program__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Interested In UA Program</label>
    <type>Checkbox</type>
</CustomField>