_Source/force-app/main/default/objects/BI_Proposal_Request_Form__c/fields/SIP_Internal_Global_Service_Value__c.field-meta.xml
<CustomField>
    <fullName>SIP_Internal_Global_Service_Value__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Internal Global Service Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>