_Source/force-app/main/default/objects/BI_Proposal_Request_Form__c/fields/SIP_isConverted__c.field-meta.xml
<CustomField>
    <fullName>SIP_isConverted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Identify whether this PRF has been converted to Sip Contract and UCS Contract</description>
    <label>Converted</label>
    <type>Checkbox</type>
</CustomField>