_Source/force-app/main/default/objects/BI_Proposal_Request_Form__c/fields/SIP_Jetstream_Amenity_Fund_Amount__c.field-meta.xml
<CustomField>
    <fullName>SIP_Jetstream_Amenity_Fund_Amount__c</fullName>
    <formula>IF( !ISNULL(SIP_Internal_Global_Service_Value__c) ,BI_PP_Total_Contracted_Investment__c * BI_PP_Set_Allocation_for_Amenities__c - SIP_Internal_Global_Service_Value__c ,BI_PP_Total_Contracted_Investment__c * BI_PP_Set_Allocation_for_Amenities__c )</formula>
    <label>Jetstream Amenity Fund Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>