_Source/force-app/main/default/objects/BI_Proposal_Request_Form__c/fields/SIP_Key_Travel_Markets__c.field-meta.xml
<CustomField>
    <fullName>SIP_Key_Travel_Markets__c</fullName>
    <label>Key Travel Markets</label>
    <length>255</length>
    <type>Text</type>
</CustomField>