_Source/force-app/main/default/objects/BI_Proposal_Request_Form__c/fields/SIP_Original_UCS_Contract_Id_For_Reinit__c.field-meta.xml
<CustomField>
    <fullName>SIP_Original_UCS_Contract_Id_For_Reinit__c</fullName>
    <label>Original UCS Contract Id For Reinit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>