_Source/force-app/main/default/objects/BI_Proposal_Request_Form__c/fields/SIP_Override_Jetstream_AmenityFundAmount__c.field-meta.xml
<CustomField>
    <fullName>SIP_Override_Jetstream_AmenityFundAmount__c</fullName>
    <label>Override Jetstream Amenity Fund Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>