_Source/force-app/main/default/objects/BI_Proposal_Request_Form__c/fields/Sip_PassPlus_Contract_Owner__c.field-meta.xml
<CustomField>
    <fullName>Sip_PassPlus_Contract_Owner__c</fullName>
    <description>PassPlus Contract owner</description>
    <formula>BI_Opportunity__r.BI_Contact__r.FirstName +  BI_Opportunity__r.BI_Contact__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>PassPlus conract owner is Primary Contact on Opportunity</inlineHelpText>
    <label>PassPlus Contract Owner</label>
    <type>Text</type>
</CustomField>