_Source/force-app/main/default/objects/BI_Proposal_Request_Form__c/fields/SIP_PassPlus_contract_owner_email__c.field-meta.xml
<CustomField>
    <fullName>SIP_PassPlus_contract_owner_email__c</fullName>
    <description>PassPlus owner&apos;s email</description>
    <formula>BI_Opportunity__r.BI_Contact__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>PassPlus owner&apos;s email. PassPlus contract will be sent to this address. You can go to primary contact on Opportunity to update the email address if needed</inlineHelpText>
    <label>PassPlus contract owner email</label>
    <type>Text</type>
</CustomField>