_Source/force-app/main/default/objects/BI_Proposal_Request_Form__c/fields/SIP_Phone_No__c.field-meta.xml
<CustomField>
    <fullName>SIP_Phone_No__c</fullName>
    <label>Phone No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>