_Source/force-app/main/default/objects/BI_Proposal_Request_Form__c/fields/SIP_Secondary_PP_Contract_Recipient__c.field-meta.xml
<CustomField>
    <fullName>SIP_Secondary_PP_Contract_Recipient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>PassPlus contract will be sent to this contact&apos;s email address</description>
    <inlineHelpText>If populated, this will be the person the contract will be sent to for signature</inlineHelpText>
    <label>PassPlus Signatory Contact Email</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Proposal Request Forms (Secondary PassPlus Contract Recipient)</relationshipLabel>
    <relationshipName>Proposal_Request_Forms</relationshipName>
    <type>Lookup</type>
</CustomField>