_Source/force-app/main/default/objects/BI_Proposal_Request_Form__c/fields/SIP_Secondary_PP_Contract_Signatory_Name__c.field-meta.xml
<CustomField>
    <fullName>SIP_Secondary_PP_Contract_Signatory_Name__c</fullName>
    <description>Use this value as signatory name to replace customer name on UCS Contract</description>
    <inlineHelpText>This is the name that will appear as the Signatory on the contract</inlineHelpText>
    <label>PassPlus Contract Signatory Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>