_Source/force-app/main/default/objects/BI_Proposal_Request_Form__c/fields/SIP_State_Province__c.field-meta.xml
<CustomField>
    <fullName>SIP_State_Province__c</fullName>
    <label>State/Province</label>
    <length>255</length>
    <type>Text</type>
</CustomField>