_Source/force-app/main/default/objects/BI_Proposal_Request_Form__c/fields/SIP_Street_Address__c.field-meta.xml
<CustomField>
    <fullName>SIP_Street_Address__c</fullName>
    <label>Street Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>