_Source/force-app/main/default/objects/BI_Proposal_Request_Form__c/fields/SIP_Subscription__c.field-meta.xml
<CustomField>
    <fullName>SIP_Subscription__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Subscription</label>
    <type>Checkbox</type>
</CustomField>