_Source/force-app/main/default/objects/BI_Proposal_Request_Form__c/fields/SIP_Title__c.field-meta.xml
<CustomField>
    <fullName>SIP_Title__c</fullName>
    <label>Title</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SIP_Title</valueSetName>
    </valueSet>
</CustomField>