_Source/force-app/main/default/objects/BI_Proposal_Request_Form__c/fields/SIP_Traveler_Amenity_Annual_Deposit__c.field-meta.xml
<CustomField>
    <fullName>SIP_Traveler_Amenity_Annual_Deposit__c</fullName>
    <label>Traveler Amenity Annual Deposit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>