_Source/force-app/main/default/objects/BI_Proposal_Request_Form__c/fields/SIP_Zipcode__c.field-meta.xml
<CustomField>
    <fullName>SIP_Zipcode__c</fullName>
    <label>Zipcode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>