_Source/force-app/main/default/objects/BI_Proposal_Request_Form__c/recordTypes/BI_PassPlus_Proposal_Request_Form.recordType-meta.xml
<RecordType>
    <fullName>BI_PassPlus_Proposal_Request_Form</fullName>
    <active>true</active>
    <label>PassPlus Proposal Request Form</label>
</RecordType>