_Source/force-app/main/default/objects/BI_Proposal_Request_Form__c/recordTypes/BI_Tactical_Incentive_TMC_Proposal_Request_Form.recordType-meta.xml
<RecordType>
    <fullName>BI_Tactical_Incentive_TMC_Proposal_Request_Form</fullName>
    <active>true</active>
    <label>Tactical Incentive (Agency) Proposal Request Form</label>
</RecordType>