_Source/force-app/main/default/objects/BI_Proposal_Request_Form__c/validationRules/BI_CAA_stage_control.validationRule-meta.xml
<ValidationRule>
    <fullName>BI_CAA_stage_control</fullName>
    <active>true</active>
    <errorConditionFormula>AND(RecordType.DeveloperName = &apos;BI_Corporate_Proposal_Request_Form&apos;,
ISCHANGED(BI_Stage__c ),  
TEXT(BI_Stage__c )  = &quot;CAA&quot;,  
!ISCHANGED(BI_Stage_Last_Modified_Date_CAA_Button__c) )</errorConditionFormula>
    <errorMessage>Please use the &apos;Customer Acceptance&apos; button to move to CAA stage</errorMessage>
</ValidationRule>