_Source/force-app/main/default/objects/BI_Proposal_Request_Form__c/validationRules/BI_Submit_Proposal_Request_Form.validationRule-meta.xml
<ValidationRule>
    <fullName>BI_Submit_Proposal_Request_Form</fullName>
    <active>true</active>
    <errorConditionFormula>TEXT(BI_Stage__c) = &apos;Submitted&apos; &amp;&amp;  
NOT(TEXT(PRIORVALUE(BI_Stage__c)) = &apos;Draft&apos;) &amp;&amp;ISCHANGED(BI_Stage__c)
&amp;&amp;  RecordType.DeveloperName  &lt;&gt; &apos;BI_PassPlus_Proposal_Request_Form&apos;</errorConditionFormula>
    <errorDisplayField>BI_Stage__c</errorDisplayField>
    <errorMessage>The Proposal Request has already been successfully submitted to the Pricing Team.  If you have any additional feedback for the Pricing Team, please use Chatter to send your message to them</errorMessage>
</ValidationRule>