_Source/force-app/main/default/objects/BI_Proposal_Request_Form__c/validationRules/SIP_Check_20_More_Than_CA.validationRule-meta.xml
<ValidationRule>
    <fullName>SIP_Check_20_More_Than_CA</fullName>
    <active>true</active>
    <errorConditionFormula>(!ISNULL(BI_PP_Set_Allocation_for_Amenities__c) &amp;&amp; BI_PP_Set_Allocation_for_Amenities__c &gt; 0.3) &amp;&amp; RecordType.DeveloperName = &apos;BI_PassPlus_Proposal_Request_Form&apos;</errorConditionFormula>
    <errorDisplayField>BI_PP_Set_Allocation_for_Amenities__c</errorDisplayField>
    <errorMessage>The Contracted Amenity % entered must not exceed 30%.</errorMessage>
</ValidationRule>