_Source/force-app/main/default/objects/BI_Proposal_Request_Form__c/validationRules/SIP_Check_JAFA_More_Than_0.validationRule-meta.xml
<ValidationRule>
    <fullName>SIP_Check_JAFA_More_Than_0</fullName>
    <active>true</active>
    <errorConditionFormula>(!ISNULL(SIP_Jetstream_Amenity_Fund_Amount__c) &amp;&amp; SIP_Jetstream_Amenity_Fund_Amount__c &lt; 0) &amp;&amp; RecordType.DeveloperName = &apos;BI_PassPlus_Proposal_Request_Form&apos;</errorConditionFormula>
    <errorMessage>Jetstream amenity fund amount must be &gt; 0.</errorMessage>
</ValidationRule>