_Source/force-app/main/default/objects/BI_Proposal_Request_Form__c/validationRules/SIP_Check_Passplus_Initial_Is_Empty.validationRule-meta.xml
<ValidationRule>
    <fullName>SIP_Check_Passplus_Initial_Is_Empty</fullName>
    <active>true</active>
    <errorConditionFormula>(SIP_Subscription__c = true &amp;&amp; ISNULL(BI_PP_Initial_Investment__c)) &amp;&amp; RecordType.DeveloperName = &apos;BI_PassPlus_Proposal_Request_Form&apos;</errorConditionFormula>
    <errorDisplayField>BI_PP_Initial_Investment__c</errorDisplayField>
    <errorMessage>Please enter Passplus Initial Investment.</errorMessage>
</ValidationRule>